--- a/index.html
+++ b/index.html
@@ -156,11 +156,15 @@
                     <div class="form-group">
                         <label>Category</label>
                         <select id="product-category">
-                            <option value="Electronics">Electronics</option>
-                            <option value="Clothing">Clothing</option>
-                            <option value="Home & Kitchen">Home & Kitchen</option>
-                            <option value="Books">Books</option>
-                            <option value="Other">Other</option>
+                            <option value="Pain Killer">Pain Killer</option>
+                            <option value="Anti-biotics">Anti-biotics</option>
+                            <option value="Anti-Malaria">Anti-Malaria</option>
+                            <option value="Victamins">Vitamins</option>
+                            <option value="Antacids">Antacids</option>
+                            <option value="Antibacteria">Antibacteria</option>
+                            <option value="Antihistamines">Antihistamines</option>
+                            <option value="I.V">I.V</option>
+                            <option value="Infusion">Infusion</option>
                         </select>
                     </div>
                     <div class="form-group">
