--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                             <option value="Antihistamines">Antihistamines</option>
                             <option value="I.V">I.V</option>
                             <option value="Infusion">Infusion</option>
+                            <option value="Others">Others</option>
                         </select>
                     </div>
                     <div class="form-group">
