--- a/index.html
+++ b/index.html
@@ -156,15 +156,14 @@
                     <div class="form-group">
                         <label>Category</label>
                         <select id="product-category">
-                            <option value="Pain Killer">Pain Killer</option>
-                            <option value="Anti-biotics">Anti-biotics</option>
-                            <option value="Anti-Malaria">Anti-Malaria</option>
-                            <option value="Victamins">Vitamins</option>
-                            <option value="Antacids">Antacids</option>
-                            <option value="Antibacteria">Antibacteria</option>
-                            <option value="Antihistamines">Antihistamines</option>
-                            <option value="I.V">I.V</option>
-                            <option value="Infusion">Infusion</option>
+                           <option value="Screen">Screen </option>
+                            <option value="Charger">Charger</option>
+                            <option value="Protector">Protector</option>
+                            <option value="Charging System">Charging System</option>
+                            <option value="Battery">Battery</option>
+                            <option value="Memory Card">Memory Card</option>
+                            <option value="Phone case">Phone case</option>
+                            <option value="Headset">Headset</option>
                             <option value="Others">Others</option>
                         </select>
                     </div>
