--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="user-avatar" id="user-avatar">A</div>
                 <div>
                     <div id="user-name">Admin User</div>
-                    <div id="user-role">Administrator</div>
+                    <div id="user-role">Ambassador</div>
                 </div>
                 <button class="logout-btn" id="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
